Fix padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ ol > li {
   }
 
   #main-doc {
-    padding: 30px 50px 0 50px;
+    padding: 30px 25px 0 25px;
     text-align: left;
     min-width: 200px;
   }
